--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -11,12 +11,12 @@
     {%- endif -%}
 
     {%- if show_copyright %}
+
         <p xmlns:cc="https://creativecommons.org/ns#" xmlns:dct="https://purl.org/dc/terms/">
-            <a property="dct:title" rel="cc:attributionURL" href="https://roll.urown.net/">
-                roll.urown.net
-            </a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/alainwolf/roll.urown.net/graphs/contributors">
+            &copy; 2014, 2022 by
+            <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/alainwolf/roll.urown.net/graphs/contributors">
                 Alain Wolf &amp; contributors
-            </a> is licensed under
+            </a>, licensed under
             <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
                 CC BY-SA 4.0
                 <img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"
